# dysfunctional_ddd

./: LICENSE  README.md
csnake/: .gitignore  README.md  index.html  package.json  webpack.config.js
csnake/css/: main.css
csnake/src/: app.ts  connection.ts  draw.ts  game.ts  snake.ts  wonsz.ts
dsnake/: .gitignore  README.md  client_session_key.aes  dsnake.cabal  stack.yaml  todo.md
dsnake/executable/: Main.hs
dsnake/src/: SnakeAggregate.hs  SnakeExtras.hs  SnakeModel.hs  SnakeRepo.hs
dsnake/src/Game/: SnakePlane.hs  State.hs
dsnake/test/: GettingStartedSpec.hs  SnakeEventsSpec.hs
dsnake/tmp/: events.json
dys_ddd/: .gitignore  ddd.md  dys_ddd.html  index.html  languages.md  pure_server.html  pure_server.md  todo.md
